apps/guacamole/base/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: jupyterhub
spec:
  template:
    spec:
      volumes:
        - name: generated-config
          emptyDir: {}

      containers:
        - name: guacamole
          volumeMounts:
            - name: generated-config
              mountPath: /etc/guacamole/guacamole.properties
              subPath: guacamole.properties
              readOnly: true
